--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ScreeningListActivity"></activity>
+        <activity android:name=".SeatInfoActivity"></activity>
+        <activity android:name=".ScreeningListActivity" />
         <activity android:name=".CinemaListActivity" />
         <activity android:name=".FilmListActivity" />
         <activity android:name=".RegisterActivity" />
