--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="test"
+        android:label="Film Tickets"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MyCardActivity"></activity>
+        <activity android:name=".qccode"></activity>
+        <activity android:name=".MyCardActivity" />
         <activity android:name=".MyTicketActivity" />
         <activity android:name=".PayActivity" />
-        <activity android:name=".model.PayActivity" />
         <activity android:name=".SeatInfoActivity" />
         <activity android:name=".ScreeningListActivity" />
         <activity android:name=".CinemaListActivity" />
